--- a/src/scss/components/_process_section.scss
+++ b/src/scss/components/_process_section.scss
@@ -1,7 +1,6 @@
 .section {
     position: relative;
     padding: 75px 0;
-    overflow-x: hidden;
 
     @include media(tablet) {
         padding: 125px 0;
@@ -18,6 +17,7 @@
     overflow: hidden;
     color: $white;
     padding: 75px 0;
+    overflow: hidden;
 
     @include media(tablet) {
         padding: 175px 0;
